<?xml version="1.0"?>
<package format="2">
  <name>ros_state_machine</name>
  <version>0.1.0</version>
  <description>Sample package for a ROS-based state machine. Tutorial to learn about ROS packages releasing</description>

  <maintainer email="kokkalisko@gmail.com">Konstantinos Kokkalis</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
